--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "cookies-next": "^4.0.0",
     "firebase": "^10.4.0",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "next": "^13.4.19",
