--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.2",
     "swr": "^2.2.4",
     "tailwindcss": "^3.3.3",
