--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "jest": "^29.7.0",
     "tailwind-scrollbar": "^3.0.5"
